--- a/ELM_40210041/ELM_40210041/MainWindow.xaml
+++ b/ELM_40210041/ELM_40210041/MainWindow.xaml
@@ -13,17 +13,18 @@
                 <GradientStop Color="#FFC1E1EC" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Label x:Name="lbl_type" Content="Message Type:" HorizontalAlignment="Left" Margin="27,111,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
+        <Label x:Name="lbl_mess_type" Content="Message Type:" HorizontalAlignment="Left" Margin="27,111,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
         <Label x:Name="lbl_company" Content="Euston Leisure Messaging" HorizontalAlignment="Left" Margin="50,22,0,0" VerticalAlignment="Top" Height="auto" Width="auto" FontSize="36" FontFamily="Bahnschrift Light"/>
-        <Button x:Name="btn_help" Content="Help" HorizontalAlignment="Left" Margin="223,414,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="btn_submit" Content="Submit" HorizontalAlignment="Left" Margin="325,414,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btn_help" Content="Help" HorizontalAlignment="Left" Margin="170,411,0,0" VerticalAlignment="Top" Width="75" Click="btn_help_Click"/>
+        <Button x:Name="btn_submit" Content="Submit" HorizontalAlignment="Left" Margin="384,411,0,0" VerticalAlignment="Top" Width="75"/>
         <Label x:Name="lbl_sender" Content="Sender:" HorizontalAlignment="Left" Margin="70,148,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
         <Label x:Name="lbl_subject" Content="Subject:" HorizontalAlignment="Left" Margin="70,185,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
         <Label x:Name="lbl_message" Content="Message:" HorizontalAlignment="Left" Margin="62,222,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
-        <TextBox x:Name="txt_" HorizontalAlignment="Left" Height="32" Margin="156,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="317" FontSize="15"/>
-        <TextBox x:Name="textBox_Copy" HorizontalAlignment="Left" Height="32" Margin="156,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="317" FontSize="15"/>
-        <TextBox x:Name="textBox_Copy1" HorizontalAlignment="Left" Height="171" Margin="156,222,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="317" FontSize="15"/>
-        <Label x:Name="label" Content="No Message Type Detected..." HorizontalAlignment="Left" Margin="156,111,0,0" VerticalAlignment="Top" Width="317" FontSize="15" FontFamily="Bahnschrift Light"/>
+        <TextBox x:Name="txt_sender" HorizontalAlignment="Left" Height="32" Margin="156,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="317" FontSize="15"/>
+        <TextBox x:Name="txt_subject" HorizontalAlignment="Left" Height="32" Margin="156,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="317" FontSize="15"/>
+        <TextBox x:Name="txt_message" HorizontalAlignment="Left" Height="171" Margin="156,222,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="317" FontSize="15"/>
+        <Label x:Name="lbl_type" Content="No Message Type Detected..." HorizontalAlignment="Left" Margin="156,111,0,0" VerticalAlignment="Top" Width="317" FontSize="15" FontFamily="Bahnschrift Light"/>
+        <Button x:Name="btn_clear" Content="Clear" HorizontalAlignment="Left" Margin="279,411,0,0" VerticalAlignment="Top" Width="75" Click="btn_clear_Click"/>
 
     </Grid>
 </Window>
