--- a/ELM_40210041/ELM_40210041/MainWindow.xaml
+++ b/ELM_40210041/ELM_40210041/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ELM_40210041"
         mc:Ignorable="d"
-        Title="MainWindow" Height="480" Width="520">
+        Title="MainWindow" Height="480" Width="809.5">
     <Grid Margin="0,0,0,-0.5">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -14,9 +14,9 @@
             </LinearGradientBrush>
         </Grid.Background>
         <Label x:Name="lbl_Mess_type" Content="Message Type:" HorizontalAlignment="Left" Margin="27,85,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
-        <Label x:Name="lbl_Company" Content="Euston Leisure Messaging" HorizontalAlignment="Left" Margin="50,22,0,0" VerticalAlignment="Top" Height="auto" Width="auto" FontSize="36" FontFamily="Bahnschrift Light"/>
-        <Button x:Name="btn_Help" Content="Help" HorizontalAlignment="Left" Margin="168,411,0,0" VerticalAlignment="Top" Width="75" Click="btn_Help_Click"/>
-        <Button x:Name="btn_Submit" Content="Submit" HorizontalAlignment="Left" Margin="398,411,0,0" VerticalAlignment="Top" Width="75" Click="btn_Submit_Click"/>
+        <Label x:Name="lbl_Company" Content="Euston Leisure Messaging" HorizontalAlignment="Left" Margin="195,10,0,0" VerticalAlignment="Top" Height="auto" Width="auto" FontSize="36" FontFamily="Bahnschrift Light"/>
+        <Button x:Name="btn_Help" Content="Help" HorizontalAlignment="Left" Margin="40,411,0,0" VerticalAlignment="Top" Width="74" Click="btn_Help_Click"/>
+        <Button x:Name="btn_Submit" Content="Submit" HorizontalAlignment="Left" Margin="332,411,0,0" VerticalAlignment="Top" Width="74" Click="btn_Submit_Click"/>
         <Label x:Name="lbl_Sender" Content="Sender:" HorizontalAlignment="Left" Margin="70,148,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
         <Label x:Name="lbl_Subject" Content="Subject:" HorizontalAlignment="Left" Margin="70,185,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
         <Label x:Name="lbl_Message" Content="Message:" HorizontalAlignment="Left" Margin="62,222,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
@@ -24,10 +24,21 @@
         <TextBox x:Name="txt_Subject" HorizontalAlignment="Left" Height="32" Margin="156,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="317" FontSize="15" IsEnabled="False"/>
         <TextBox x:Name="txt_Message" HorizontalAlignment="Left" Height="171" Margin="156,222,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="317" FontSize="15"/>
         <Label x:Name="lbl_Type" Content="No Message Type Detected..." HorizontalAlignment="Left" Margin="156,85,0,0" VerticalAlignment="Top" Width="317" FontSize="15" FontFamily="Bahnschrift Light"/>
-        <Button x:Name="btn_Clear" Content="Clear" HorizontalAlignment="Left" Margin="286,411,0,0" VerticalAlignment="Top" Width="75" Click="btn_Clear_Click"/>
-        <Button x:Name="btn_List" Content="View Lists" HorizontalAlignment="Left" Margin="50,411,0,0" VerticalAlignment="Top" Width="75" Click="btn_List_Click"/>
+        <Button x:Name="btn_Clear" Content="Clear" HorizontalAlignment="Left" Margin="220,411,0,0" VerticalAlignment="Top" Width="74" Click="btn_Clear_Click"/>
         <Label x:Name="lbl_senderID" Content="Sender ID:" HorizontalAlignment="Left" Margin="53,113,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.461" Height="32" FontSize="15" FontFamily="Bahnschrift Light"/>
         <Label x:Name="lbl_IDgen" Content="" HorizontalAlignment="Left" Margin="156,113,0,0" VerticalAlignment="Top" Width="317" FontSize="15" FontFamily="Bahnschrift Light"/>
+        <TabControl HorizontalAlignment="Left" Height="308" Margin="519,85,0,0" VerticalAlignment="Top" Width="243">
+            <TabItem x:Name="tab_Trending" Header="Trending">
+                <Grid Background="White">
+                    <ListBox x:Name="lst_Trending" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="217"/>
+                </Grid>
+            </TabItem>
+            <TabItem x:Name="tab_Mention" Header="Mentions">
+                <Grid Background="White">
+                    <ListBox x:Name="lst_Mention" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="217"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
 
     </Grid>
 </Window>
