--- a/ELM_40210041/ELM_40210041/list_to_show.xaml
+++ b/ELM_40210041/ELM_40210041/list_to_show.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ELM_40210041"
         mc:Ignorable="d"
-        Title="list_to_show" Height="450" Width="490">
+        Title="list_to_show" Height="450" Width="490" Closed="Window_Closed">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="White" Offset="0.5"/>
@@ -29,9 +29,6 @@
                 <Grid Background="White">
                     <ListBox x:Name="lst_SIR" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="351" Grid.ColumnSpan="2"/>
                 </Grid>
-            </TabItem>
-            <TabItem Header="TabItem" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="54">
-                <Grid Background="#FFE5E5E5"/>
             </TabItem>
         </TabControl>
 
